--- a/Pole Balancing.ipynb
+++ b/Pole Balancing.ipynb
@@ -461,7 +461,56 @@
    "id": "7cbe69b2",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "dqn.save_weights('dqn_weights.h5f', overwrite=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "469e59e3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "del model\n",
+    "del dqn\n",
+    "del env"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "566185a2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "env = gym.make('CartPole-v0')\n",
+    "actions = env.action_space.n\n",
+    "states = env.observation_space.shape[0]\n",
+    "model = build_model(states, actions)\n",
+    "dqn = build_agent(model, actions)\n",
+    "dqn.compile(Adam(lr=1e-3), metrics=['mae'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "51ae06bc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dqn.load_weights('dqn_weights.h5f')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3abab84a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_ = dqn.test(env, nb_episodes=5, visualize=True)"
+   ]
   }
  ],
  "metadata": {
